[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Krisztián Szabó <sz.krisztian96@gmail.com>"]
edition = "2018"

[[bin]]
name = "day1_part1"
path = "src/day1/part1.rs"

[[bin]]
name = "day1_part2"
path = "src/day1/part2.rs"

[[bin]]
name = "day2_part1"
path = "src/day2/part1.rs"

[[bin]]
name = "day2_part2"
path = "src/day2/part2.rs"

[dependencies]
regex = "1"